create functionality implemented

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -2,7 +2,8 @@
 <h1>{{name}}</h1>
   <img class="cube" src="{{imageUrl}}">
   <div class="details">
-    <p><span>Description:</span> {{description}}</p>
-    <p><span>Difficulty level:</span> {{difficulty}}</p>
+    <p><span>Description:</span>{{description}}</p>
+    <p><span>Price:</span>{{price}}</p>
     <a class="btn" href="/">Back</a>
   </div>
+  {{/with}}
