--- a/static/css/site.css
+++ b/static/css/site.css
@@ -97,7 +97,7 @@ button, main a.btn {
     text-decoration: none;
     display: inline-block;
     font-size: 18px;
-    width: 43%;
+    width: 60px;
     margin: 12px;
     margin-left: 6%;
     border-radius: 4px;
