--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -1,6 +1,6 @@
 <h1>Delete Listing</h1>
 <div class="form">
-    {{#with car}}
+    {{#with cube}}
     <form action="/delete/{{id}}" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" value="{{name}}" disabled>
