--- a/views/accessories/createAccessory.hbs
+++ b/views/accessories/createAccessory.hbs
@@ -7,6 +7,8 @@
         <textarea id="description" name="description"></textarea>
         <label for="image">ImageUrl</label>
         <input type="text" id="image" name="imageUrl">
+        <label for="price">Price</label>
+        <input type="number" id="price" name="price">
         <input type="submit" value="Create">
     </form>
 </div>
