--- a/views/details.hbs
+++ b/views/details.hbs
@@ -7,9 +7,10 @@
     <a class="btn" href="/">Back</a>
     <a class="btn" href="/edit/{{id}}">Edit</a>
     <a class="btn" href="/delete/{{id}}">Delete</a>
+    <a class="btn" href="/attach/{{id}}">Attach</a>
   </div>
-{{/with}}
-<h2>Accessories</h2>
+  {{#if accessory}}
+  <h2>Accessories</h2>
 <div class="accessories">
     <div class="accessory">
         <img src="https://images-na.ssl-images-amazon.com/images/I/61J8UP8pySL._SX425_.jpg" alt="stickerName">
@@ -28,3 +29,5 @@
     </div>
     <h3 class="italic">This cube has no accessories yet...</h3>
 </div>
+{{/if}}
+{{/with}}
