--- a/views/accessories/attachAccessory.hbs
+++ b/views/accessories/attachAccessory.hbs
@@ -2,18 +2,19 @@
 <div class="form">
     <h2>{{cube.name}}</h2>
     <img class="cube" src="{{cube.imageUrl}}">
-    <form action="/attach/{{id}}" method="POST">
+    {{#if accessories}}
+    <form action="/attach/{{cube.id}}" method="POST">
         <label for="accessory">Accessories</label>
         <select id="accessory" name="accessory" />
-        <option value="Accessory 1">Accessory 1</option>
-        <option value="Accessory 2">Accessory 2</option>
-        <option value="Accessory 3">Accessory 3</option>
-        <option value="Accessory 4">Accessory 4</option>
-        <option value="Accessory 5">Accessory 5</option>
+        {{#each accessories}}
+        <option value="{{id}}">{{name}}</option>
+        {{/each}}
         </select>
         <input type="submit" value="Attach">
     </form>
+    {{else}}
     <h3 class="italic">This cube has all available accessories so far or there is no available at all...
     </h3>
-    <a class="btn" href="/details/{{cune.id}}">Back</a>
+    {{/if}}
+    <a class="btn" href="/details/{{cube.id}}">Back</a>
 </div>
