--- a/views/accessories/attachAccessory.hbs
+++ b/views/accessories/attachAccessory.hbs
@@ -13,7 +13,8 @@
         <input type="submit" value="Attach">
     </form>
     {{else}}
-    <h3 class="italic">This cube has all available accessories so far or there is no available at all...
+    <h3 class="italic">
+        This cube has all available accessories so far or there is no available at all...
     </h3>
     {{/if}}
     <a class="btn" href="/details/{{cube.id}}">Back</a>
