--- a/views/partials/accessory.hbs
+++ b/views/partials/accessory.hbs
@@ -1,6 +1,6 @@
 <div class="accessory">
-    <img src="{{imageUrl}}" alt="">
+    <img src="{{imageUrl}}" alt="picture">
     <h3>{{name}}</h3>
     <p>{{description}}</p>
-    <p>{{price}}</p>
+    <p>Price: {{price}}</p>
 </div>
